# Formulaire

./: Cargo.toml  README.md  index.html  main.js  package-lock.json  package.json  script.js  style.css
.github/workflows/: build.yml  release.yml
src/: main.rs  models.rs
src-tauri/: Cargo.toml  tauri.conf.json
