[package]
name = "formulaire"
version = "0.1.0"
edition = "2021"

[dependencies]
yew = { version = "0.21.0", features = ["csr"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
gloo-file = "0.3"
gloo-dialogs = "0.2"
wasm-bindgen = "0.2.89"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["HtmlInputElement", "HtmlTextAreaElement", "HtmlSelectElement", "Window", "Document", "Blob", "Url", "File", "FileReader", "EventTarget", "HtmlAnchorElement"] }
uuid = { version = "1.6", features = ["v4", "js"] }
js-sys = "0.3"
